# spherical-cnn

./: CHANGELOG.md  README.md  dockerfile  dockerfile-qm9  dockerfile-spherical-mnist  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
spherical_cnn/: __init__.py  basic_test.py  conftest.py  input_pipeline.py  input_pipeline_test.py  input_pipeline_utils.py  layers.py  layers_test.py  main.py  models.py  models_test.py  np_spin_spherical_harmonics.py  np_spin_spherical_harmonics_test.py  sphere_utils.py  sphere_utils_test.py  spin_spherical_harmonics.py  spin_spherical_harmonics_test.py  test_utils.py  test_utils_test.py  train.py  train_test.py
spherical_cnn/configs/: default.py
spherical_cnn/molecules/: __init__.py  input_pipeline.py  input_pipeline_test.py  main.py  models.py  models_test.py  train.py  train_test.py
spherical_cnn/molecules/configs/: default.py  small.py
spherical_cnn/molecules/data/qm9/: qm9.py
spherical_cnn/spherical_mnist/: debug_test.py  input_pipeline.py  input_pipeline_test.py  main.py  models.py  models_test.py  train.py  train_test.py
spherical_cnn/spherical_mnist/configs/: default.py
spherical_cnn/spherical_mnist/data/: spherical_mnist.py
spherical_cnn/weather/: input_pipeline.py  input_pipeline_stats.py  input_pipeline_test.py
spherical_cnn/weather/data/era5/: CITATIONS.bib  TAGS.txt  __init__.py  era5.py
spherical_cnn/weather/testdata/era5/keisler22_32x32/1.0.1/: dataset_info.json  features.json
